clang/test/BSC/Negative/Ownership/Borrow/borrow_wrapped_with_parens/borrow_wrapped_with_parens.cbs
// RUN: %clang_cc1 -verify %s

typedef struct {
  int a;
} A;

typedef struct {
  int a;
  int b;
} B;

B *borrow borrow_bak_offset(A *owned *borrow, int);
void use(B *borrow header);

A *owned test1() {
  A *owned block = nullptr;
  B *borrow header = nullptr;
  header = borrow_bak_offset((&mut block), sizeof(B)); // expected-note {{`block` is borrowed here}}
  A *owned block2 = block; // expected-error {{cannot move out of `block` because it is borrowed}}
  use(header);
  return block2;
}

A *owned test2() {
  A *owned block = nullptr;
  B *borrow header = nullptr;
  header = borrow_bak_offset(((&mut block)), sizeof(B)); // expected-note {{`block` is borrowed here}}
  A *owned block2 = block; // expected-error {{cannot move out of `block` because it is borrowed}}
  use(header);
  return block2;
}

#define GET(s, pdate, ptime, pui) \
  do { \
    (pdate)->a = (s)->a; \
    (ptime)->b = (s)->b; \
    (*pui)     = (s)->c; \
  } while(0)

typedef struct {
  int a;
  int b;
  unsigned int c;
} S;

typedef struct {
  int a;
} Date;

typedef struct {
  int b;
} Time;

safe unsigned int foo(S *borrow);

safe unsigned int test(Date *borrow date, Time *borrow time, unsigned int *borrow pui) {
  S s = {0};
  GET(&mut s, date, time, pui);
  return 1;
}
